# flask-web-socket

./: .gitignore  app.py  config.py  pyproject.toml
migrations/versions/: 15649f7ae58b_creating_database.py
src/errors/error_types/: http_mercado_pago.py
src/models/: payment.py
src/payments/: pix.py
src/services/: mercado_pago.py
templates/: payment.html
tests/: test_pix.py
